--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
                 alt="">
             <nav>
                 <ul>
+                    <li><a href="write.html">Write</a></li>
                     <li><a href="#">About us</a></li>
-                    <li><a href="write.html">Contact</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                     <li class="bg"><a class="login" href="#">sign in</a></li>
                 </ul>
             </nav>
@@ -80,4 +81,5 @@
         </div>
     </div>
 </body>
+
 </html>
