--- a/contact.html
+++ b/contact.html
@@ -24,6 +24,7 @@
                     <li><a href="#">About us</a></li>
                     <li><a href="contact.html">Contact</a></li>
                     <li class="bg"><a class="login" href="#">sign in</a></li>
+                    <li><a href="index.html">Central Page</a></li>
                 </ul>
             </nav>
         </div>
@@ -36,14 +37,16 @@
                     <label for="name">Your phone</label>
                     <input type="text" id="name" name="name" placeholder="Your Phone">
                     <label for="content">Your Name</label>
+                    <input type="text" id="name" name="name" placeholder="Your Name">
                     <textarea name="content" id="content"></textarea>
                     <label for="file"></label>
                     <input type="file" name="image" id="image">
-                    <input type="submit" value="Write">
+                    <input type="submit" value="Complete">
                 </form>
             </div>
         </div>
     </div>
 </body>
+
 
 </html>
