--- a/write.html
+++ b/write.html
@@ -24,6 +24,7 @@
                     <li><a href="#">About us</a></li>
                     <li><a href="write.html">Contact</a></li>
                     <li class="bg"><a class="login" href="#">sign in</a></li>
+                    <li><a href="index.html">Central Page</a></li>
                 </ul>
             </nav>
         </div>
@@ -36,6 +37,7 @@
                     <label for="name">Name article:</label>
                     <input type="text" id="name" name="name" placeholder="Name article">
                     <label for="content">Content:</label>
+                    <input type="text" id="name" name="name" placeholder="Content">
                     <textarea name="content" id="content"></textarea>
                     <label for="file">Image:</label>
                     <input type="file" name="image" id="image">
@@ -45,5 +47,6 @@
         </div>
     </div>
 </body>
+
 
 </html>
