--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="add_header">
         <div class="container">
-            <p class="slogan">Lorem ipsum dolor sit amet.</p>
+            <p class="slogan">Welcome on our site</p>
             <a href="write.html"><span class="btn">write something</span></a>
         </div>
     </div>
@@ -83,3 +83,4 @@
 </body>
 
 </html>
+
